--- a/_sources/docs/shap_structured_data_classification.ipynb
+++ b/_sources/docs/shap_structured_data_classification.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Explainable AI with TensorFlow, Keras and SHAP**\n",
     "\n",
-    "*This tutorial is mainly based on the Keras tutorial [\"Structured data classification from scratch\"](https://keras.io/examples/structured_data/structured_data_classification_from_scratch/) by François Chollet and [\"Census income classification with Keras\"](https://shap.readthedocs.io/en/latest/example_notebooks/tabular_examples/neural_networks/Census%20income%20classification%20with%20Keras.html#Census-income-classification-with-Keras) by Scott Lundberg.*"
+    "*This code tutorial is mainly based on the Keras tutorial [\"Structured data classification from scratch\"](https://keras.io/examples/structured_data/structured_data_classification_from_scratch/) by François Chollet and [\"Census income classification with Keras\"](https://shap.readthedocs.io/en/latest/example_notebooks/tabular_examples/neural_networks/Census%20income%20classification%20with%20Keras.html#Census-income-classification-with-Keras) by Scott Lundberg.*"
    ]
   },
   {
@@ -149,10 +149,7 @@
     }
    },
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "Here's the description of each feature:\n",
+    "Here's the description of the data:\n",
     "\n",
     "Column| Description| Feature Type\n",
     "------------|--------------------|----------------------\n",
@@ -354,8 +351,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "CzkR9bceb_vu"
+   },
+   "source": [
+    "Let's visualize our connectivity graph:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -363,58 +369,58 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      " 1/19 [>.............................] - ETA: 2s - loss: 0.6155 - accuracy: 0.9231"
+      " 1/19 [>.............................] - ETA: 2s - loss: 0.7202 - accuracy: 0.2308"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-12 17:00:50.797019: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2022-06-17 21:27:28.476252: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19/19 [==============================] - 0s 4ms/step - loss: 0.6545 - accuracy: 0.7107 - val_loss: 0.6483 - val_accuracy: 0.7049\n",
+      "19/19 [==============================] - 0s 4ms/step - loss: 0.7119 - accuracy: 0.3967 - val_loss: 0.7118 - val_accuracy: 0.4754\n",
       "Epoch 2/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.6301 - accuracy: 0.7273 - val_loss: 0.6289 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.6848 - accuracy: 0.5124 - val_loss: 0.6894 - val_accuracy: 0.4590\n",
       "Epoch 3/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.6078 - accuracy: 0.7273 - val_loss: 0.6109 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.6650 - accuracy: 0.6157 - val_loss: 0.6705 - val_accuracy: 0.6557\n",
       "Epoch 4/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.5867 - accuracy: 0.7273 - val_loss: 0.5950 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.6477 - accuracy: 0.6818 - val_loss: 0.6566 - val_accuracy: 0.6885\n",
       "Epoch 5/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.5659 - accuracy: 0.7273 - val_loss: 0.5821 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.6311 - accuracy: 0.7397 - val_loss: 0.6434 - val_accuracy: 0.7377\n",
       "Epoch 6/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.5476 - accuracy: 0.7273 - val_loss: 0.5719 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.6161 - accuracy: 0.7479 - val_loss: 0.6301 - val_accuracy: 0.7377\n",
       "Epoch 7/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.5307 - accuracy: 0.7273 - val_loss: 0.5631 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.6015 - accuracy: 0.7893 - val_loss: 0.6170 - val_accuracy: 0.7377\n",
       "Epoch 8/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.5159 - accuracy: 0.7273 - val_loss: 0.5562 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.5857 - accuracy: 0.7975 - val_loss: 0.6058 - val_accuracy: 0.7377\n",
       "Epoch 9/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.5042 - accuracy: 0.7273 - val_loss: 0.5508 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 975us/step - loss: 0.5714 - accuracy: 0.8017 - val_loss: 0.5969 - val_accuracy: 0.7377\n",
       "Epoch 10/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.4939 - accuracy: 0.7273 - val_loss: 0.5468 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 990us/step - loss: 0.5581 - accuracy: 0.7975 - val_loss: 0.5867 - val_accuracy: 0.7705\n",
       "Epoch 11/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.4860 - accuracy: 0.7273 - val_loss: 0.5440 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.5412 - accuracy: 0.7934 - val_loss: 0.5783 - val_accuracy: 0.7869\n",
       "Epoch 12/15\n",
-      "19/19 [==============================] - 0s 951us/step - loss: 0.4794 - accuracy: 0.7273 - val_loss: 0.5422 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.5260 - accuracy: 0.7893 - val_loss: 0.5705 - val_accuracy: 0.7869\n",
       "Epoch 13/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.4737 - accuracy: 0.7273 - val_loss: 0.5412 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.5121 - accuracy: 0.7934 - val_loss: 0.5637 - val_accuracy: 0.7705\n",
       "Epoch 14/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.4685 - accuracy: 0.7273 - val_loss: 0.5400 - val_accuracy: 0.7213\n",
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.4980 - accuracy: 0.8058 - val_loss: 0.5581 - val_accuracy: 0.7869\n",
       "Epoch 15/15\n",
-      "19/19 [==============================] - 0s 1ms/step - loss: 0.4649 - accuracy: 0.7314 - val_loss: 0.5386 - val_accuracy: 0.7213\n"
+      "19/19 [==============================] - 0s 1ms/step - loss: 0.4860 - accuracy: 0.8099 - val_loss: 0.5534 - val_accuracy: 0.7869\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x283368a00>"
+       "<keras.callbacks.History at 0x1667baad0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,24 +434,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Configure the model with Keras Model.compile:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "CzkR9bceb_vu"
-   },
-   "source": [
-    "Let's visualize our connectivity graph:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "id": "gtP52PWsb_vu"
    },
@@ -457,7 +447,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,15 +459,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/2 [==============================] - 0s 1ms/step - loss: 0.5386 - accuracy: 0.7213\n",
-      "Accuracy 0.7213114500045776\n"
+      "2/2 [==============================] - 0s 1ms/step - loss: 0.5534 - accuracy: 0.7869\n",
+      "Accuracy 0.7868852615356445\n"
      ]
     }
    ],
@@ -498,14 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The model you have developed can now classify a row from a CSV file directly after you've included the preprocessing layers inside the model itself. Let's demonstrate the process:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Save the heart diseases classification model"
+    "- Let's save the heart diseases classification model to demonstrate the process of a real world scenario (where we would first save the model and reload it in a different production environment):"
    ]
   },
   {
@@ -536,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Load model"
+    "- Load the model:"
    ]
   },
   {
