--- a/_sources/docs/structured_data_classification_functions.ipynb
+++ b/_sources/docs/structured_data_classification_functions.ipynb
@@ -1301,7 +1301,7 @@
     }
    },
    "source": [
-    "- We quickly get to arounf 80% validation accuracy."
+    "- We quickly get to around 80% validation accuracy."
    ]
   },
   {
