--- a/docs/tf-example.ipynb
+++ b/docs/tf-example.ipynb
@@ -502,8 +502,12 @@
     "y = np.array([-2.0, 1.0, 4.0, 7.0, 10.0, 13.0], dtype=float)\n",
     "\n",
     "# Model definition\n",
-    "model = tf.keras.Sequential([keras.layers.Dense(units=1, input_shape=[1])])\n",
-    "model.compile(optimizer='sgd', loss='mean_squared_error')\n",
+    "model = tf.keras.Sequential([\n",
+    "    keras.layers.Dense(units=1, input_shape=[1])])\n",
+    "\n",
+    "# Compile model\n",
+    "model.compile(optimizer='sgd', \n",
+    "              loss='mean_squared_error')\n",
     "\n",
     "# Model fitting\n",
     "model.fit(x, y, epochs=50, verbose=0)\n",
