--- a/_sources/docs/tf-example.ipynb
+++ b/_sources/docs/tf-example.ipynb
@@ -473,6 +473,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -490,8 +497,6 @@
     }
    ],
    "source": [
-    "# Summary\n",
-    "\n",
     "# Import modules\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
