--- a/docs/keras-sequential-c.ipynb
+++ b/docs/keras-sequential-c.ipynb
@@ -305,7 +305,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ds",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +319,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:52) \n[Clang 13.0.1 ]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0de8387c967863cc622aba8b7ea5b466d4dfde089153d484429677aa77034389"
+   }
   }
  },
  "nbformat": 4,
